ex1.13_todos/w_old/manifests/dep-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-fe-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-fe
  template:
    metadata:
      labels:
        app: todos-fe
    spec:
      containers:
        - name: todos-fe
          image: usb9/todos-fe:1.13.13
