ex1.13_todos/w_old/manifests/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-be-svc
spec:
  type: ClusterIP
  selector:
    app: todos-be
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 3001
