ex1.13_todos/w_old/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-fe-svc
            port:
              number: 5000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todos-be-svc
            port:
              number: 5001
